Validacion de Require de datos
Se genera la validacion de datos nulos.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,10 +9,10 @@
     <div class="text-center">
         <h2 class="display-4">Integrantes</h2>
         <tr>
-            <p>Abner Alberto Miranda Barahona   5190-17-14482     rol: DBA, Desarrollador</p>
-            <p>Francisco Roberto Maza Trujillo  5190-08-730       rol: Scrum Master, Desarrollador</p>
-            <p>Carlos Yovel López Orellana      5190-11-3148      rol: Product Owner, Desarrollador</p>
-            <p>Carlos Rubén Ruíz Menéndez       5190-12-20959     rol: Desarrollador</p>
+            <p>Abner Alberto Miranda Barahona   5190-17-14482     </p>
+            <p>Francisco Roberto Maza Trujillo  5190-08-730       </p>
+            <p>Carlos Yovel López Orellana      5190-11-3148      </p>
+            <p>Carlos Rubén Ruíz Menéndez       5190-12-20959     </p>
         <tr>
     </div>
 
