--- a/Views/SipTblEncabezadoPlanillas/Create.cshtml
+++ b/Views/SipTblEncabezadoPlanillas/Create.cshtml
@@ -14,22 +14,22 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="SipTblEplId" class="control-label">Codigo del empleado</label>
-                <input asp-for="SipTblEplId" class="form-control" />
+                <input asp-for="SipTblEplId" class="form-control" required/>
                 <span asp-validation-for="SipTblEplId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SipTblEplFechahora" class="control-label">Fecha y hora</label>
-                <input asp-for="SipTblEplFechahora" class="form-control" />
+                <input asp-for="SipTblEplFechahora" class="form-control" required/>
                 <span asp-validation-for="SipTblEplFechahora" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SipTblEplFechainicio" class="control-label">Fecha de inicio</label>
-                <input asp-for="SipTblEplFechainicio" class="form-control" />
+                <input asp-for="SipTblEplFechainicio" class="form-control" required/>
                 <span asp-validation-for="SipTblEplFechainicio" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SipTblEplFechafin" class="control-label">Fecha de fin</label>
-                <input asp-for="SipTblEplFechafin" class="form-control" />
+                <input asp-for="SipTblEplFechafin" class="form-control" required/>
                 <span asp-validation-for="SipTblEplFechafin" class="text-danger"></span>
             </div>
             <div class="form-group">
