--- a/Views/SipTblDetallePlanillas/Create.cshtml
+++ b/Views/SipTblDetallePlanillas/Create.cshtml
@@ -14,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="SipTblDplId" class="control-label">Codigo Detalle de Planilla</label>
-                <input asp-for="SipTblDplId" class="form-control" />
+                <input asp-for="SipTblDplId" class="form-control" required/>
                 <span asp-validation-for="SipTblDplId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -27,32 +27,32 @@
             </div>
             <div class="form-group">
                 <label asp-for="SipTblDedDeducciones" class="control-label">Deducciones</label>
-                <input asp-for="SipTblDedDeducciones" class="form-control" />
+                <input asp-for="SipTblDedDeducciones" class="form-control" required/>
                 <span asp-validation-for="SipTblDedDeducciones" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SipTblDplBonificacion" class="control-label">Bonificación</label>
-                <input asp-for="SipTblDplBonificacion" class="form-control" />
+                <input asp-for="SipTblDplBonificacion" class="form-control" required/>
                 <span asp-validation-for="SipTblDplBonificacion" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SipTblDplIgss" class="control-label">IGSS</label>
-                <input asp-for="SipTblDplIgss" class="form-control" />
+                <input asp-for="SipTblDplIgss" class="form-control" required/>
                 <span asp-validation-for="SipTblDplIgss" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SipTblDplIrtra" class="control-label">IRTRA</label>
-                <input asp-for="SipTblDplIrtra" class="form-control" />
+                <input asp-for="SipTblDplIrtra" class="form-control" required/>
                 <span asp-validation-for="SipTblDplIrtra" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SipTblDplIsr" class="control-label">ISR</label>
-                <input asp-for="SipTblDplIsr" class="form-control" />
+                <input asp-for="SipTblDplIsr" class="form-control" required/>
                 <span asp-validation-for="SipTblDplIsr" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SipTblDplOtros" class="control-label">Otros</label>
-                <input asp-for="SipTblDplOtros" class="form-control" />
+                <input asp-for="SipTblDplOtros" class="form-control" required/>
                 <span asp-validation-for="SipTblDplOtros" class="text-danger"></span>
             </div>
             <div class="form-group">
