--- a/Views/SipTblEmpleadoes/Create.cshtml
+++ b/Views/SipTblEmpleadoes/Create.cshtml
@@ -13,49 +13,49 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-               <label asp-for="SipTblEmpId" class="control-label">Código de Empleado</label>
-               <input asp-for="SipTblEmpId" class="form-control" />
-               <span asp-validation-for="SipTblEmpId" class="text-danger"></span>
+                <label asp-for="SipTblEmpId" class="control-label">Código de Empleado</label>
+                <input asp-for="SipTblEmpId" class="form-control" required/>
+                <span asp-validation-for="SipTblEmpId" class="text-danger"></span>
             </div>
-     
+
             <div class="form-group">
                 <label asp-for="SipTblEmpNombres" class="control-label">Nombres</label>
-                <input asp-for="SipTblEmpNombres" class="form-control" />
+                <input asp-for="SipTblEmpNombres" class="form-control" required/>
                 <span asp-validation-for="SipTblEmpNombres" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SipTblEmpApellidos" class="control-label">Apellidos</label>
-                <input asp-for="SipTblEmpApellidos" class="form-control" />
+                <input asp-for="SipTblEmpApellidos" class="form-control" required/>
                 <span asp-validation-for="SipTblEmpApellidos" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SipTblEmpNit" class="control-label">NIT</label>
-                <input asp-for="SipTblEmpNit" class="form-control" />
+                <input asp-for="SipTblEmpNit" class="form-control" required/>
                 <span asp-validation-for="SipTblEmpNit" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SipTblEmpDpi" class="control-label">DPI</label>
-                <input asp-for="SipTblEmpDpi" class="form-control" />
+                <input asp-for="SipTblEmpDpi" class="form-control" required/>
                 <span asp-validation-for="SipTblEmpDpi" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SipTblEmpTel" class="control-label">Teléfono</label>
-                <input asp-for="SipTblEmpTel" class="form-control" />
+                <input asp-for="SipTblEmpTel" class="form-control" required/>
                 <span asp-validation-for="SipTblEmpTel" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SipTblEmpDireccion" class="control-label">Dirección</label>
-                <input asp-for="SipTblEmpDireccion" class="form-control" />
+                <input asp-for="SipTblEmpDireccion" class="form-control" required/>
                 <span asp-validation-for="SipTblEmpDireccion" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SipTblEmpNumigss" class="control-label">IGSS</label>
-                <input asp-for="SipTblEmpNumigss" class="form-control" />
+                <input asp-for="SipTblEmpNumigss" class="form-control" required/>
                 <span asp-validation-for="SipTblEmpNumigss" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SipTblEmpNumirtra" class="control-label">IRTRA</label>
-                <input asp-for="SipTblEmpNumirtra" class="form-control" />
+                <input asp-for="SipTblEmpNumirtra" class="form-control" required/>
                 <span asp-validation-for="SipTblEmpNumirtra" class="text-danger"></span>
             </div>
             <div class="form-group">
