--- a/Views/SipTblTipoActividads/Create.cshtml
+++ b/Views/SipTblTipoActividads/Create.cshtml
@@ -14,17 +14,17 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="SipTblActId" class="control-label">Codigo de la actividad</label>
-                <input asp-for="SipTblActId" class="form-control" />
+                <input asp-for="SipTblActId" class="form-control" required/>
                 <span asp-validation-for="SipTblActId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SipTblActNombre" class="control-label">Nombre de la actividad</label>
-                <input asp-for="SipTblActNombre" class="form-control" />
+                <input asp-for="SipTblActNombre" class="form-control" required/>
                 <span asp-validation-for="SipTblActNombre" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SipTblActCostoact" class="control-label">Costo de la actividad</label>
-                <input asp-for="SipTblActCostoact" class="form-control" />
+                <input asp-for="SipTblActCostoact" class="form-control" required/>
                 <span asp-validation-for="SipTblActCostoact" class="text-danger"></span>
             </div>
             <div class="form-group">
